--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ build/
 bld/
 [Bb]in/
 [Oo]bj/
+.vs/
+vs/
 
 # Roslyn cache directories
 *.ide/
@@ -191,20 +193,8 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 
-!inPOS/inPOS.Data/inPOS_DB.mdf
-!inPOS/inPOS.Data/inPOS_DB_log.ldf
 bower_components/
-inPOS/inPOS.Web/dist/
-inPOS/inPOS.Web/Content/*.css
-inPOS/inPOS.Web/typings/
-inPOS/inPOS.Web/Properties/PublishProfiles/*.json
-inPOS/inPOS.Web/Scripts/**/*.js
-inPOS/inPOS.Web/Scripts/**/*.js.map
-inPOS/inPOS.Web/.idea/copyright/profiles_settings.xml
-inPOS/inPOS.Web/.idea/inPOS.Web.iml
-inPOS/inPOS.Web/.idea/misc.xml
-inPOS/inPOS.Web/.idea/modules.xml
-inPOS/inPOS.Web/.idea/workspace.xml
-
 src/gitWeb.Web/dist/build.js
 src/gitWeb.Web/npm-debug.*
+.vs/*
+.vs/gitWeb2/v15/sqlite3/storage.ide
