--- a/gitWebApp/package.json
+++ b/gitWebApp/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href /$ROOT/gitWebApp/scotch-player/dist/",
+    "build": "ng build --base-href $ROOT",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "net": "dotnet watch run --project ../api/api.csproj",
+    "e2e": "ng e2e",
+    "electron0:": "electron ."
   },
   "private": true,
   "dependencies": {
@@ -51,6 +53,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ngx-perfect-scrollbar": "^4.8.4",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
