--- a/gitWebApp/package.json
+++ b/gitWebApp/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular2-virtual-scroll": "^0.3.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
