--- a/gitWebApp/package.json
+++ b/gitWebApp/package.json
@@ -15,6 +15,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-redux/store": "^6.5.7",
     "@angular/animations": "^4.4.4",
     "@angular/cdk": "^2.0.0-beta.11",
     "@angular/common": "^4.2.4",
@@ -33,6 +34,7 @@
     "electron-reload": "^1.2.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^1.9.3",
+    "redux": "^3.7.2",
     "rxjs": "^5.4.2",
     "ts-md5": "1.2.2",
     "zone.js": "^0.8.14"
@@ -56,6 +58,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "ngx-perfect-scrollbar": "^4.8.4",
     "protractor": "~5.1.2",
+    "redux-devtools-extension": "^2.13.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
